# gevulot-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  go.mod
.github/workflows/: ci.yaml  publish.yaml
proto/: main.go
proto/gevulot/gevulot/: genesis.proto  metadata.proto  params.proto  pin.proto  proof.proto  query.proto  task.proto  tx.proto  util.proto  worker.proto  workflow.proto
proto/gevulot/gevulot/module/: module.proto
scripts/: prepare_publish.sh
src/: base_client.rs  builders.rs  error.rs  event_fetcher.rs  events.rs  gevulot_client.rs  gov_client.rs  lib.rs  models.rs  pin_client.rs  runtime_config.rs  signer.rs  sudo_client.rs  task_client.rs  worker_client.rs  workflow_client.rs
src/builders/: admin_builders.rs  common.rs  mod.rs  params_builders.rs  pin_builders.rs  task_builders.rs  worker_builders.rs  workflow_builders.rs
src/models/: metadata.rs  mod.rs  pin.rs  serialization_helpers.rs  task.rs  worker.rs  workflow.rs
