[package]
name = "gevulot-rs"
version = "0.1.3-pre"
edition = "2021"
authors = ["Gevulot Team"]
description = "Gevulot Rust API"
keywords = ["blockchain", "zero-knowledge"]
homepage = "https://www.gevulot.com"
repository = "https://github.com/gevulotnetwork/gevulot-rs"
readme = "README.md"
documentation = "https://docs.rs/gevulot-rs"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
include = [
    "/buf_exported",
    "/proto",
    "/src",
    ".gitignore",
    "/buf.work.yaml",
    "/build.rs",
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE*",
    "/README.md",
]

[lib]
name = "gevulot_rs"
path = "src/lib.rs"

[dependencies]
const_format = "0.2.33"
cosmos-sdk-proto = "0.25"
cosmrs = { version = "0.20", features = ["tokio", "grpc", "rpc", "tendermint-rpc"] }
bip32 =  { version = "0.5.1", features = [ "mnemonic", "bip39" ] }
derivative = "2"
derive_builder = "0.20.0"
hex = "0.4.3"
http = "1.1.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
prost = "0.13"
rand = "0.8.5"
rand_core = "0.6.4"
semver = "1"
serde = "1"
serde_json = "1"
tendermint = "0.39.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "tls-native-roots"] }
backon = "1.2.0"

[dev-dependencies]
pretty_env_logger = "0.5.0"
serde_yaml = "0.9.34"

[build-dependencies]
prost-build = "0.12"
tonic-buf-build = "0.2"
tonic-build = "0.11"
